--- a/homepage.html
+++ b/homepage.html
@@ -6,8 +6,16 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>      
+<body>   
+    <header>
+        <img 
+    </header>   
     <section class="sec1"></section>
-    <section class="sec2"></section>
+    <section class="sec2">
+        Hola !
+        <div class="small">Already an user?</div>
+        
+    </section>
+    <section class="sec3"></section>
 </body>
 </html>
