major changes made: 12:55pm

--- a/homepage.html
+++ b/homepage.html
@@ -6,7 +6,18 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>     
+<body>
+    <header>
+        <b>Bank</b>
+        <nav>
+            <ul class="nav_links">
+                <li><a href="#">Services</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">FAQ</a></li>
+            </ul>
+        </nav>
+        <a class="cta" href="#"><button>Sign Up</button></a>
+    </header>     
     <section class="sec1"></section>
     <section class="sec2">
         Hola !
