--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <b>Bank</b>
+        <b>BANK</b>
         <nav>
             <ul class="nav_links">
                 <li><a href="#">Services</a></li>
@@ -20,7 +20,7 @@
     </header>     
     <section class="sec1"></section>
     <section class="sec2">
-        Hola !
+        welcome !
         <div class="small">Already an user?</div>
         
     </section>
